corrected spellings and indentation

--- a/linear_regression/LinearRegression_single.ipynb
+++ b/linear_regression/LinearRegression_single.ipynb
@@ -99,10 +99,11 @@
    "source": [
     "In the above graph we measure the change of y wrt x and the result is called the slope.\n",
     "In differentiation we find the change in `y` with an infinitesimal small change in `x`. Formally\n",
-    "$$f' = \\frac{f(x + \\delta x) - f(x)} {\\delta x}$$\n",
+    "\n",
+    "$$\\large f' = \\frac{f(x + \\delta x) - f(x)} {\\delta x}$$\n",
     "Therefore the derivative of a function `f'(x)` gives the slope of the function `f(x)` at the point x. The slope at any point of a function is nothing but its tangent. Now our objective is to find weights of the line equation(this is also called hypothesis function) such that our error function is minimised. When the slope is zero, its either a maximum point or a minimum. We therefore differentiate our cost function and equate it to zero. Weights are found in analytical way in this manner.\n",
     "\n",
-    "Solving the equation will allow us to find the local minimum of the error function by plugging the weight value in our hypothesis function. Also note this is a convex function. If global minimum is same as local minimum we call it as convex function. Refer [here](https://web.stanford.edu/~boyd/cvxbook/bv_cvxbook.pdf) for their properties. However we will not solve for our weights analytically. Mainly because it will be extremely slow to solve the linear equations in higher dimensions and data size. Matrix inverse takes `O(n^3)` time!. Here gradiant descent optmisation algorithm comes to the rescue.\n",
+    "Solving the equation will allow us to find the local minimum of the error function by plugging the weight value in our hypothesis function. Also note this is a convex function. If global minimum is same as local minimum we call it as convex function. Refer [here](https://web.stanford.edu/~boyd/cvxbook/bv_cvxbook.pdf) for their properties. However we will not solve for our weights analytically. Mainly because it will be extremely slow to solve the linear equations in higher dimensions and data size. Matrix inverse takes `O(n^3)` time! Gradiant descent optmisation algorithm magic will help us here.\n",
     "\n",
     "### Gradiant Descent\n",
     "We know the slope of the graph gives the direction of the curve its moving in. Using that we will move towards the local minimum of the error function plot. If slope is positive we move backward, if negative we move forward."
@@ -137,16 +138,20 @@
    "source": [
     "In the above graph we consider our cost function to be a parameter of only one variable. Our error function is kind of a bowl, which has a global optimum(minimum) value where slope is 0. Here the error is zero. In gradiant descent, we first randomly assign our weights to some value. Then we find its derivative(slope) and move opposite to its direction to reach the minimum or zero slope. The derivative of `theta_0` and `theta_1` is given by\n",
     "\n",
-    "$$\\frac{\\delta}{\\delta\\theta_1} = \\frac{2 \\sum_{i=1}^n{((\\theta_0 + theta_1X_i)}X_i - y_i)} {N}$$\n",
+    "$$\\large \\frac{\\delta}{\\delta\\theta_1} = \\frac{2 \\sum_{i=1}^n{((\\theta_0 + \\theta_1X_i)}X_i - y_i)} {N}$$\n",
     "\n",
+    "and\n",
     "\n",
-    "$$\\frac{\\delta}{\\delta\\theta_0} = \\frac{2 \\sum_{i=1}^n{(\\theta_0 + theta_1X_i} - y_i)} {N}$$\n",
+    "$$\\large \\frac{\\delta}{\\delta\\theta_0} = \\frac{2 \\sum_{i=1}^n{(\\theta_0 + \\theta_1X_i} - y_i)} {N}$$\n",
     "\n",
     "And gradiant descent updates our weights by formula below.\n",
     "\n",
-    "$$\\theta_i = \\theta_i - \\alpha\\frac{\\delta}{\\delta\\theta_i}$$\n",
+    "$$\\large \\theta_i = \\theta_i - \\alpha\\frac{\\delta}{\\delta\\theta_i}$$\n",
     "\n",
-    "`theta_i` is 0 and 1, representing the slope and the intercept. `alphta` is the learning rate, which tells the equation on how much to move forward. Moving too slow will make our convergence slow, and moving fast will make our values to reach infinity. We iteratively update our weight value until our line best fits the data. The stopping condition for our algorithm differs by purposes. We can set number of iterations, time, some minimum change in 'old' and 'new' `theta` values. We will now use LinearRegression to fit and sample data and then test its performance by calculating the error. The code of LinearRegression class is [here](www.github.com). We will use a sample data set."
+    "`theta_i` is 0 and 1, representing the slope and the intercept. `alpha` is the learning rate, which tells the equation on how much to move forward. Moving too slow will make our convergence slow, and moving fast will make our values to reach infinity. We iteratively update our weight value until our line best fits the data. The stopping condition for our algorithm differs by purposes. We can set number of iterations, time, some minimum change in 'old' and 'new' `theta` values. \n",
+    "\n",
+    "### Implementation\n",
+    "We will now use LinearRegression to fit and sample data and then test its performance by calculating the error. The code of LinearRegression class is [here](https://github.com/kaichogami/machine_learning/blob/master/linear_regression/single_variable.py). We will use a sample data set. Go through the above code and see whats happeneing. Good practice would be to develop your own implementation."
    ]
   },
   {
