multi features Linear regression and ipython notebook

--- a/linear_regression/LinearRegression_single.ipynb
+++ b/linear_regression/LinearRegression_single.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linear Regression with single input vector\n",
+    "### Linear Regression with single feature vector\n",
     "\n",
-    "This notebook is aimed at providing an introduction and to some extent an insight for Linear Regression model with optimization of error function using gradiant descent. If it seems new, don't worry we will go through the basics. Some prior knowledge about python is required but not essential if famililar with software like Matlab.\n",
+    "This notebook is aimed at providing an introduction and to some extent an insight for Linear Regression model with optimization of error function using gradiant descent. If it seems new, don't worry we will go through the basics. Some prior knowledge about python is required but not essential if famililar with software like Matlab. Also I recommend watching Andrew's video in machine learning courses, as they are the best way to get started.\n",
     "\n",
     "Scatterplot is a graph which has two or more axes displaying a set of data for the variables. Lets plot a simple scatterplot below with two variables, one output(y), the vertical axis, one input(X), the horizontal axis."
    ]
@@ -74,7 +74,8 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
